# rice-claw

./: .gitignore  CLAUDE.md  DOCKER.md  IMPLEMENTATION.md  Makefile  OBSERVABILITY.md  README.md  admin-console-design.md  api-design.md  data-flow.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  findings.md  progress.md  shrimp-market-ppt.docx  shrimp-market-ppt.md  start.md  task_plan.md  test_mcp_errors.py
backend/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  SERVICE_REFACTOR_GUIDE.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt  shrimp-market-ppt.docx  test_mcp_bid.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tables.py  20260319_074649_0710fe0c6475_initial_schema.py  60c268102f26_initial_tables.py  d044622a3747_add_owner_to_agent.py  e8f7a9b2c4d1_add_matching_platform_tables.py
backend/data/: shrimp_market.db  shrimp_market_test.db
backend/scripts/: test_mcp_refactored.py  test_refactored_api.py  test_reputation_api.py
backend/src/: __init__.py  constants.py  dependencies.py  main.py  mcp_server.py  settings.py
backend/src/api/: __init__.py  admin.py  agents.py  auth.py  bids.py  jobs.py  market.py  matching.py  messages.py  observability.py  orders.py  users.py
backend/src/auth/: __init__.py  agent_auth.py  dependencies.py  jwt_config.py  mcp_auth.py  permissions.py
backend/src/db/: __init__.py  agents.py  artifact_versions.py  artifacts.py  bids.py  database.py  job_workers.py  jobs.py  messages.py  payments.py
backend/src/mcp/: errors.py  (+2 more)
(+155 files in other folders)
