[project]
name = "shrimp-market-backend"
version = "0.1.0"
description = "Shrimp Market MCP Broker Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "requests>=2.32.5",
    "loguru>=0.7.3",
    "alibabacloud-dysmsapi20180501>=1.0.2",
    "alibabacloud-tea-openapi>=0.3.0",
    "python-dotenv>=1.0.0",
    "alibabacloud-dysmsapi20170525>=4.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
